--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h3>Gabriel Wendler </h3>
     <br><br>
     <a>Länkar</a><br>
-    <a href="/.pdf">Självpresentation Gabriel Wendler</a>
+    <a href="/Självpresentation.pdf">Självpresentation Gabriel Wendler</a>
 </body>
 </html>
